added ConnectionPool, ConnectionProxy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-db.url=jdbc:sqlserver://localhost:1433;database=Library
+db.url=jdbc:sqlserver://localhost:1433;database=Library;trustServerCertificate=true
+db.username=sa
+db.password=saaccount
 db.pool.size=10
