--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,12 @@
         <location>/pages/error/404.jsp</location>
     </error-page>
 
+    <error-page>
+        <error-code>400</error-code>
+        <location>/pages/error/400.jsp</location>
+    </error-page>
+
+
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
