--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,10 @@
         <location>/pages/error/400.jsp</location>
     </error-page>
 
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/pages/error/400.jsp</location>
+    </error-page>
 
     <session-config>
         <session-timeout>30</session-timeout>
