--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,20 +4,20 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
-    <error-page>
-        <error-code>404</error-code>
-        <location>/pages/error/404.jsp</location>
-    </error-page>
+<!--    <error-page>-->
+<!--        <error-code>404</error-code>-->
+<!--        <location>/pages/error/404.jsp</location>-->
+<!--    </error-page>-->
 
-    <error-page>
-        <error-code>400</error-code>
-        <location>/pages/error/400.jsp</location>
-    </error-page>
+<!--    <error-page>-->
+<!--        <error-code>400</error-code>-->
+<!--        <location>/pages/error/400.jsp</location>-->
+<!--    </error-page>-->
 
-    <error-page>
-        <exception-type>java.lang.Throwable</exception-type>
-        <location>/pages/error/400.jsp</location>
-    </error-page>
+<!--    <error-page>-->
+<!--        <exception-type>java.lang.Throwable</exception-type>-->
+<!--        <location>/pages/error/400.jsp</location>-->
+<!--    </error-page>-->
 
     <session-config>
         <session-timeout>30</session-timeout>
