--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,13 @@
             <version>4.11.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>4.11.0</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
         <dependency>
@@ -91,6 +98,8 @@
             <version>3.24.2</version>
             <scope>test</scope>
         </dependency>
+
+
     </dependencies>
 
 
